// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractItem should render correctly 1`] = `
<View>
  <SummaryCard
    action={
      {
        "callback": [Function],
        "icon": "dollarSign",
        "label": "make payment",
      }
    }
    amount={21000}
    creationDate={2021-01-01T00:00:00.000Z}
    currency="EUR"
    date={2021-01-01T00:00:00.000Z}
    id="contractId"
    lastModified={2021-01-01T00:00:00.000Z}
    level="APP"
    offerId="offerId"
    price={21}
    title="PC‑NAN‑NAN"
    tradeStatus="paymentRequired"
    type="bid"
    unreadMessages={0}
  />
</View>
`;

exports[`ContractItem should render correctly with past contract 1`] = `
<View>
  <SummaryCard
    action={
      {
        "callback": [Function],
        "icon": undefined,
        "label": undefined,
      }
    }
    amount={21000}
    creationDate={2021-01-01T00:00:00.000Z}
    currency="EUR"
    date={2021-01-01T00:00:00.000Z}
    icon={
      <Icon
        color="#88E2B7"
        id="buy"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    id="contractId"
    lastModified={2021-01-01T00:00:00.000Z}
    level="SUCCESS"
    offerId="offerId"
    price={21}
    theme="light"
    title="PC‑NAN‑NAN"
    tradeStatus="tradeCompleted"
    type="bid"
    unreadMessages={0}
  />
</View>
`;

exports[`ContractItem should render correctly with seller requested cancel 1`] = `
<View>
  <SummaryCard
    action={
      {
        "callback": [Function],
        "icon": "xCircle",
        "label": "seller wants to cancel",
      }
    }
    amount={21000}
    creationDate={2021-01-01T00:00:00.000Z}
    currency="EUR"
    date={2021-01-01T00:00:00.000Z}
    id="contractId"
    lastModified={2021-01-01T00:00:00.000Z}
    level="DEFAULT"
    offerId="offerId"
    price={21}
    title="PC‑NAN‑NAN"
    tradeStatus="confirmCancelation"
    type="bid"
    unreadMessages={0}
  />
</View>
`;

exports[`ContractItem should render correctly with unread messages 1`] = `
<View>
  <SummaryCard
    action={
      {
        "callback": [Function],
        "icon": "dollarSign",
        "label": "make payment",
      }
    }
    amount={21000}
    creationDate={2021-01-01T00:00:00.000Z}
    currency="EUR"
    date={2021-01-01T00:00:00.000Z}
    id="contractId"
    lastModified={2021-01-01T00:00:00.000Z}
    level="APP"
    offerId="offerId"
    price={21}
    title="PC‑NAN‑NAN"
    tradeStatus="paymentRequired"
    type="bid"
    unreadMessages={1}
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
        {
          "bottom": 0,
          "marginBottom": 10,
          "marginLeft": 12,
          "marginRight": 12,
          "marginTop": 10,
          "position": "absolute",
          "right": 0,
        },
      ]
    }
  >
    <test-file-stub
      fill="#FFFCFA"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#F56522",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 14,
              "fontWeight": "bold",
              "letterSpacing": 0.14,
              "lineHeight": 20,
              "paddingBottom": 2,
              "position": "absolute",
              "textAlign": "center",
            },
            [
              {
                "color": "#F56522",
              },
              {
                "paddingLeft": 2,
                "paddingTop": 4,
              },
            ],
          ],
        ]
      }
    >
      1
    </Text>
  </View>
</View>
`;
